# crewai-research-flow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/first_multi_agent/: __init__.py  config.py  main.py  models.py
src/first_multi_agent/agents/: planner.py  reviewer.py
src/first_multi_agent/flow/: research_flow.py
src/first_multi_agent/tasks/: planning_task.py  review_task.py
